# asteroids

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
src/: cfg.rs  crt.frag  crt.vert  entity.rs  main.rs  palette.rs  sprites.rs
src/systems/: ai.rs  cleanup.rs  collision.rs  damage.rs  draw.rs  gamestate.rs  input.rs  mod.rs  moving.rs  spawn.rs  timers.rs
